[gd_scene load_steps=20 format=3 uid="uid://dy7uggn20rwdd"]

[ext_resource type="Texture2D" uid="uid://dcwplvpctqmwo" path="res://MainGame/Entities/Submarine/submarino2.png" id="2_bqqt8"]
[ext_resource type="Script" uid="uid://d1rs0d0nc1drl" path="res://MainGame/GameFunctions/GameStartRoutine.gd" id="2_fmpgn"]
[ext_resource type="Script" uid="uid://cbqtxxk2hcdb5" path="res://MainGame/Entities/Submarine/MainPlayer.gd" id="2_ws5ob"]
[ext_resource type="Script" uid="uid://djepfgl8c0sxp" path="res://MainGame/Entities/Shark/shark.gd" id="3_bqqt8"]
[ext_resource type="Texture2D" uid="uid://cqiddta3ax6m0" path="res://MainGame/Entities/Shark/SpriteShark.png" id="3_ws5ob"]
[ext_resource type="Texture2D" uid="uid://bmbnmrnuc1xym" path="res://MainGame/Background/Clouds.png" id="4_d3y3c"]
[ext_resource type="Script" uid="uid://cma73wb3nbjt4" path="res://MainGame/Entities/Shark/spawner.gd" id="5_8qpgq"]
[ext_resource type="PackedScene" uid="uid://bs0crarlvc04f" path="res://MainGame/MainGameEssentials/hitbox.tscn" id="5_pv6b4"]
[ext_resource type="Texture2D" uid="uid://c1d285pcilmjd" path="res://MainGame/Background/Ship.png" id="5_ymia7"]
[ext_resource type="Script" uid="uid://btrjg0hsjqo1v" path="res://MainGame/Entities/Shark/spawner_2.gd" id="8_fmpgn"]
[ext_resource type="Texture2D" uid="uid://dpr3y3sdjnxwv" path="res://MainGame/Background/Sea.png" id="9_mtwmo"]
[ext_resource type="Texture2D" uid="uid://crow0ng10ixfx" path="res://MainGame/Background/Sky.png" id="10_d3y3c"]
[ext_resource type="Script" uid="uid://drvejxm5ffsb6" path="res://MainGame/MainGameEssentials/spawnerDiver.gd" id="13_rvr5t"]
[ext_resource type="Script" uid="uid://dkm0n5awc63yy" path="res://MainGame/MainGameEssentials/spawnerDiver2.gd" id="14_l23oj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qpgq"]
size = Vector2(139, 41.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pv6b4"]
size = Vector2(41, 42.7813)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3hs3"]
size = Vector2(1293.25, 464.188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dnxm"]
size = Vector2(195, 662)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws5ob"]
size = Vector2(85, 47)

[node name="MainGame" type="Node2D"]
script = ExtResource("2_fmpgn")
metadata/_edit_vertical_guides_ = [1282.0]

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="Sprite2D" parent="Background"]
position = Vector2(640.5, 72)
scale = Vector2(2.21701, 0.438272)
texture = ExtResource("10_d3y3c")

[node name="Clouds" type="Sprite2D" parent="Background"]
position = Vector2(638, 68.5)
scale = Vector2(2.21875, 0.453704)
texture = ExtResource("4_d3y3c")

[node name="Sea" type="Sprite2D" parent="Background"]
position = Vector2(639.5, 125.5)
scale = Vector2(2.2691, 3.25617)
texture = ExtResource("9_mtwmo")

[node name="Ship" type="Sprite2D" parent="Background"]
position = Vector2(638, 435)
scale = Vector2(2.24306, 1.29012)
texture = ExtResource("5_ymia7")

[node name="GameStart" type="Node" parent="."]
script = ExtResource("2_fmpgn")

[node name="GameScore" type="Node" parent="."]
script = ExtResource("2_fmpgn")

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
top_level = true
light_mask = 512
visibility_layer = 512
position = Vector2(154, 292)
collision_mask = 21
script = ExtResource("2_ws5ob")

[node name="shootPos" type="Node2D" parent="Player"]
position = Vector2(30, 42)

[node name="playerSprite" type="Sprite2D" parent="Player"]
scale = Vector2(0.157288, 0.158447)
texture = ExtResource("2_bqqt8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(7.62939e-06, 13.109)
shape = SubResource("RectangleShape2D_8qpgq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player"]
unique_name_in_owner = true
position = Vector2(10, -28.391)
shape = SubResource("RectangleShape2D_pv6b4")

[node name="Hurtbox" type="Area2D" parent="Player"]
collision_layer = 33
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hurtbox"]
position = Vector2(0.500008, 13.609)
shape = SubResource("RectangleShape2D_8qpgq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Hurtbox"]
position = Vector2(10, -29)
shape = SubResource("RectangleShape2D_pv6b4")

[node name="Border" type="Node2D" parent="."]
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D" groups=["Enemies"]]
position = Vector2(638, -163)
shape = SubResource("RectangleShape2D_v3hs3")

[node name="StaticBody2D2" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D2"]
position = Vector2(638.625, 879.094)
shape = SubResource("RectangleShape2D_v3hs3")

[node name="StaticBody2D3" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D3"]
position = Vector2(-96, 328)
shape = SubResource("RectangleShape2D_8dnxm")

[node name="StaticBody2D4" type="StaticBody2D" parent="Border"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/StaticBody2D4"]
position = Vector2(1376, 333)
shape = SubResource("RectangleShape2D_8dnxm")

[node name="Enemies" type="Node2D" parent="." groups=["Enemies"]]

[node name="Shark" type="Node2D" parent="Enemies"]

[node name="Shark" type="CharacterBody2D" parent="Enemies/Shark" groups=["Enemies"]]
top_level = true
position = Vector2(220, -192)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_bqqt8")

[node name="Sprite2D" type="Sprite2D" parent="Enemies/Shark/Shark"]
position = Vector2(1265.38, 61.5)
scale = Vector2(0.0668946, 0.0537109)
texture = ExtResource("3_ws5ob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Shark/Shark"]
position = Vector2(1263.49, 61.5)
shape = SubResource("RectangleShape2D_ws5ob")

[node name="Hitbox" parent="Enemies/Shark/Shark" instance=ExtResource("5_pv6b4")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Shark/Shark/Hitbox"]
position = Vector2(1263.49, 61.5)
shape = SubResource("RectangleShape2D_ws5ob")

[node name="Spawner" type="Node2D" parent="."]
visible = false
position = Vector2(1723, 441)
script = ExtResource("5_8qpgq")

[node name="SpawnPoints" type="Node2D" parent="Spawner"]
position = Vector2(136, -9)

[node name="Spawn 1" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(355, 136)
rotation = -0.00275528

[node name="Spawn 2" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(104, -118)

[node name="Spawn 3" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(240, 3)

[node name="Spawn 4" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(-4, -195)

[node name="Spawn 5" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(666, 150)

[node name="Spawn 6" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(626, -103)

[node name="Spawn 7" type="Marker2D" parent="Spawner/SpawnPoints"]
position = Vector2(279, -154)

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 3.0
autostart = true
ignore_time_scale = true

[node name="Spawner2" type="Node2D" parent="."]
visible = false
position = Vector2(-2164, 430)
script = ExtResource("8_fmpgn")

[node name="SpawnPoints" type="Node2D" parent="Spawner2"]
position = Vector2(10, -4)

[node name="Spawn 8" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(447, 17)
rotation = -0.00275528

[node name="Spawn 9" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(132, -168)

[node name="Spawn 10" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(229, -90)

[node name="Spawn 11" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(19, -46)

[node name="Spawn 12" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(666, 117)

[node name="Spawn 13" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(663, -149)

[node name="Spawn 14" type="Marker2D" parent="Spawner2/SpawnPoints"]
position = Vector2(350, -130)

[node name="Timer" type="Timer" parent="Spawner2"]
wait_time = 3.0
autostart = true
ignore_time_scale = true

[node name="SpawnerDivers" type="Node2D" parent="."]
visible = false
position = Vector2(-937, 446)
script = ExtResource("13_rvr5t")

[node name="SpawnPoints2" type="Node2D" parent="SpawnerDivers"]
position = Vector2(10, -4)

[node name="Spawn 1" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(673, -4.99999)
rotation = -0.00275528

[node name="Spawn 2" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(666, 118)

[node name="Spawn 3" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(675, 48)

[node name="Spawn 4" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(678, 176)

[node name="Spawn 5" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(669, -81)

[node name="Spawn 6" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(663, -149)

[node name="Spawn 7" type="Marker2D" parent="SpawnerDivers/SpawnPoints2"]
position = Vector2(660, -209)

[node name="Timer" type="Timer" parent="SpawnerDivers"]
wait_time = 10.0
autostart = true
ignore_time_scale = true

[node name="SpawnerDivers2" type="Node2D" parent="."]
visible = false
position = Vector2(668, 436)
script = ExtResource("14_l23oj")

[node name="SpawnPoints2" type="Node2D" parent="SpawnerDivers2"]
position = Vector2(10, -4)

[node name="Spawn 1" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(673, -4.99999)
rotation = -0.00275528

[node name="Spawn 2" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(666, 118)

[node name="Spawn 3" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(675, 48)

[node name="Spawn 4" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(678, 176)

[node name="Spawn 5" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(669, -81)

[node name="Spawn 6" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(663, -149)

[node name="Spawn 7" type="Marker2D" parent="SpawnerDivers2/SpawnPoints2"]
position = Vector2(660, -209)

[node name="Timer" type="Timer" parent="SpawnerDivers2"]
wait_time = 10.0
autostart = true
ignore_time_scale = true

[node name="diverUI" type="RichTextLabel" parent="."]
offset_left = 1122.0
offset_top = 1.0
offset_right = 1327.0
offset_bottom = 104.0
bbcode_enabled = true
text = "[img=100]res://MainGame/Entities/Diver/Mergulhador.png[/img]  [color=black][font_size=32]X[/font_size][/color]
"

[node name="lifeUI" type="RichTextLabel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="area_entered" from="Player/Hurtbox" to="Player" method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Player/Hurtbox" to="Player" method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Spawner2/Timer" to="Spawner2" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnerDivers/Timer" to="SpawnerDivers" method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnerDivers2/Timer" to="SpawnerDivers2" method="_on_timer_timeout"]
